✨ feat(auth): implement logout functionality and add doctors page
- add logout functionality to clear cookies and redirect to login page
- create new doctor details page with doctor details component
- create new update doctor page
- create add doctor page with form and validation
- create doctors page with table and pagination
- update admin layout to increase padding and change background color
- update global styles to add table container styles
- update layout metadata
- create app header with logout button
- add doctor icon to admin sidebar
- create doctor details component
- create doctor component
- create data not found component
- create pagination component
- create actions component
- create back link component
- create confirm modal component
- create form input component
- create section component
- update badge styles
- create verify otp modal
- create admin login schema
- create doctor schema
- create middleware to check authentication and permissions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,4 +129,7 @@
   [role="button"]:not([disabled]) {
     cursor: pointer;
   }
+     .table-container {
+       @apply  border bg-white w-full;
+     }
 }
